k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tyt-service
spec:
  selector:
    app: tyt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP  # или NodePort для локального теста
